Add document html page & impl basic dark mode config

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -1,3 +1,7 @@
+.prose {
+  @apply dark:text-gray-300;
+}
+
 .prose a {
-  @apply text-indigo-700 no-underline;
+  @apply text-indigo-700 no-underline dark:text-purple-500;
 }
