--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -1,7 +1,19 @@
 .prose {
-  @apply dark:text-gray-300;
+  @apply dark:text-gray-200;
 }
 
 .prose a {
-  @apply text-indigo-700 no-underline dark:text-purple-500;
+  @apply no-underline text-purple-500 hover:text-purple-600 dark:text-purple-500 dark:hover:text-purple-400;
+}
+
+.prose h1,
+.prose h2,
+.prose h3 {
+  @apply dark:text-gray-100;
+}
+
+.prose h4,
+.prose h5,
+.prose h6 {
+  @apply dark:text-gray-300;
 }
