Modify tsconfig & impl 404 page

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -17,3 +17,7 @@
 .prose h6 {
   @apply dark:text-gray-300;
 }
+
+.prose blockquote {
+  @apply font-normal  border-gray-300 dark:border-gray-300 dark:text-gray-300;
+}
