--- a/src/components/Navigation/NavigationLinks.module.css
+++ b/src/components/Navigation/NavigationLinks.module.css
@@ -1,4 +1,5 @@
 .link {
+  position: relative;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -17,31 +18,23 @@
   &[data-active] {
     &,
     &:hover {
-      background-color: var(--mantine-color-blue-light);
-      color: var(--mantine-color-blue-light-color);
+      background-color: var(--mantine-color-dark-5);
+      color: var(--mantine-primary-color-4);
     }
   }
 }
 
 .icon {
-  color: var(--mantine-color-dark-1);
   margin-right: var(--mantine-spacing-sm);
-  &:hover {
-    color: var(--mantine-color-white);
-  }
 }
 
-.active {
-  &,
-  &:hover {
-    background-color: rgba(var(--mantine-primary-color-8), 0.25);
-    color: var(--mantine-color-white);
-  }
+.externalIcon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: var(--mantine-spacing-xs);
 }
 
-.trailingIcon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 1rem;
+.link:not(:hover) .externalIcon {
+  visibility: hidden;
 }
