--- a/src/components/common/Page.module.css
+++ b/src/components/common/Page.module.css
@@ -4,7 +4,7 @@
   position: relative;
   flex-direction: column;
   width: 100%;
-  max-height: 100vh;
+  /* max-height: 100vh; */
 }
 
 .contentContainer {
