--- a/src/components/Navigation/NavigationLinks.module.css
+++ b/src/components/Navigation/NavigationLinks.module.css
@@ -18,7 +18,7 @@
   &[data-active] {
     &,
     &:hover {
-      background-color: var(--mantine-color-dark-5);
+      /* background-color: var(--mantine-color-dark-5); */
       color: var(--mantine-primary-color-4);
     }
   }
