--- a/src/components/common/Page.module.css
+++ b/src/components/common/Page.module.css
@@ -11,11 +11,11 @@
   width: 100%;
   padding-top: calc(var(--mantine-spacing-xl) * 2);
   padding-bottom: calc(var(--mantine-spacing-xl) * 4);
-  padding-left: calc(var(--mantine-spacing-xl) * 3);
-  padding-right: calc(var(--mantine-spacing-xl) * 3);
+  padding-left: calc(var(--mantine-spacing-xl) * 1);
+  padding-right: calc(var(--mantine-spacing-xl) * 1);
   @media (max-width: $mantine-breakpoint-sm) {
-    padding-left: var(--mantine-spacing-xl);
-    padding-right: var(--mantine-spacing-xl);
+    padding-left: var(--mantine-spacing-xs);
+    padding-right: var(--mantine-spacing-xs);
   }
 }
 
