--- a/src/components/common/Navigation.module.css
+++ b/src/components/common/Navigation.module.css
@@ -40,3 +40,44 @@
 .icon {
   color: var(--mantine-primary-color-5);
 }
+
+.navbarLink {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: var(--mantine-font-size-sm);
+  color: var(--mantine-color-dark-1);
+  padding: var(--mantine-spacing-xs);
+  margin-top: var(--mantine-spacing-xs);
+  border-radius: var(--mantine-radius-md);
+  font-weight: 500;
+
+  &:hover {
+    background-color: var(--mantine-color-dark-5);
+    color: var(--mantine-color-white);
+  }
+
+  &[data-active] {
+    &,
+    &:hover {
+      /* background-color: var(--mantine-color-dark-5); */
+      color: var(--mantine-primary-color-4);
+    }
+  }
+}
+
+.navbarIcon {
+  margin-right: var(--mantine-spacing-sm);
+}
+
+.navbarExternalIcon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: var(--mantine-spacing-xs);
+}
+
+.navbarLink:not(:hover) .externalIcon {
+  visibility: hidden;
+}
