--- a/src/app/global.css
+++ b/src/app/global.css
@@ -22,9 +22,45 @@
 }
 
 @layer utilities {
+  .px-shell {
+    @apply px-6 desktop:px-0;
+  }
+
+  .w-shell-full {
+    @apply -mx-6;
+  }
+
+  .border-surface {
+    @apply dark:border dark:border-slate-800;
+  }
+
+  .bg-surface {
+    @apply dark:bg-slate-900/80;
+  }
+
+  .hover-surface {
+    @apply dark:hover:bg-slate-900;
+  }
+
+  .text-surface-primary {
+    @apply dark:text-slate-200;
+  }
+
+  .text-surface-secondary {
+    @apply dark:text-slate-300/95;
+  }
+
+  .text-surface-tertiary {
+    @apply dark:text-slate-400;
+  }
+
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.prose {
+  @apply dark:prose-invert;
 }
 
 .prose h2,
