--- a/src/app/global.css
+++ b/src/app/global.css
@@ -29,23 +29,27 @@
   }
 
   .bg-surface {
-    @apply dark:bg-slate-900/80;
+    @apply bg-white dark:bg-slate-900/80;
   }
 
   .hover-surface {
     @apply dark:hover:bg-slate-900;
   }
 
+  .shadow-surface {
+    @apply transition duration-500 shadow-md hover:shadow-lg dark:shadow-lg dark:hover:shadow-violet-500/20;
+  }
+
   .text-surface-primary {
-    @apply dark:text-slate-200;
+    @apply text-slate-800 dark:text-slate-200;
   }
 
   .text-surface-secondary {
-    @apply dark:text-slate-300/95;
+    @apply text-slate-700 dark:text-slate-300/95;
   }
 
   .text-surface-tertiary {
-    @apply dark:text-slate-400;
+    @apply text-slate-600 dark:text-slate-400;
   }
 
   .text-balance {
@@ -54,13 +58,13 @@
 }
 
 .prose {
-  @apply dark:prose-slate dark:prose-invert;
+  @apply prose-slate dark:prose-slate dark:prose-invert;
 }
 
 .prose h2,
 h3,
 h4 {
-  @apply dark:text-slate-200 tracking-tight !important;
+  @apply text-slate-800 dark:text-slate-200 tracking-tight !important;
 }
 
 .prose h1 + p {
@@ -76,5 +80,5 @@ h4 {
 }
 
 .prose a {
-  @apply no-underline dark:text-violet-400 hover:underline break-words;
+  @apply no-underline text-violet-700 dark:text-violet-400 hover:underline break-words;
 }
