--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,7 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --sh-class: #2d5e9d;
+  --sh-identifier: #354150;
+  --sh-sign: #8996a3;
+  --sh-string: #007f7a;
+  --sh-keyword: #e02518;
+  --sh-comment: #a19595;
+  --sh-jsxliterals: #6266d1;
+  --sh-property: #e25a1c;
+  --sh-entity: #e25a1c;
+}
+
 @media (prefers-color-scheme: dark) {
+  :root {
+    --sh-class: #4c97f8;
+    --sh-identifier: white;
+    --sh-keyword: #f47067;
+    --sh-string: #0fa295;
+  }
   html {
     color-scheme: dark;
   }
@@ -54,24 +72,58 @@
   @apply prose-slate dark:prose-slate dark:prose-invert;
 }
 
-.prose h2,
-h3,
-h4 {
-  @apply text-slate-800 dark:text-slate-200 tracking-tight !important;
+.prose .anchor {
+  @apply absolute invisible no-underline;
+
+  margin-left: -1em;
+  padding-right: 0.5em;
+  width: 80%;
+  max-width: 700px;
+  cursor: pointer;
 }
 
-.prose h1 + p {
-  @apply -mt-6 leading-snug text-zinc-800 dark:text-slate-300;
-}
-
-.prose h2 + p {
-  @apply -mt-6 leading-snug text-zinc-800 dark:text-slate-300;
-}
-
-.prose h3 + p {
-  @apply -mt-4 leading-snug text-zinc-800 dark:text-slate-300;
+.anchor:hover {
+  @apply visible;
 }
 
 .prose a {
   @apply no-underline text-violet-700 dark:text-violet-400 hover:underline break-words;
+}
+
+.prose .anchor:after {
+  @apply text-slate-400 dark:text-slate-600;
+  content: '#';
+}
+
+.prose *:hover > .anchor {
+  @apply visible no-underline;
+}
+
+.prose pre {
+  @apply bg-surface rounded-lg overflow-x-auto;
+}
+
+.prose code {
+  @apply px-1 py-0.5 rounded-lg;
+}
+
+.prose pre code {
+  @apply p-0;
+  border: initial;
+  line-height: 1.5;
+}
+
+.prose code span {
+  @apply font-medium;
+}
+
+.prose img {
+  /* Don't apply styles to next/image */
+  @apply m-0;
+}
+
+.prose h2,
+h3,
+h4 {
+  @apply tracking-tight font-semibold !important;
 }
